Check the engine on Windows and assert run.bat resolves everything
A hosted runner has no display, so the window cannot be drawn there. The launch
check therefore asserts the failure is the missing graphics device and nothing
earlier, which is what would catch a missing jar or native library.